feat: Melhorando design mobile e corrigindo problemas no scroll

--- a/src/assets/css/primeiroLayout/big.scss
+++ b/src/assets/css/primeiroLayout/big.scss
@@ -275,6 +275,10 @@
         flex-direction: column;
     }
 
+    .no-scroll {
+        overflow: hidden;
+    }
+
     .alert-open {
         transform: translateY(0px) !important;
         opacity: 100% !important;
