--- a/src/assets/css/primeiroLayout/big.scss
+++ b/src/assets/css/primeiroLayout/big.scss
@@ -192,11 +192,18 @@
         color: $complementary;
         position: absolute;
         transition: all 0.2s;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     #cart-icon:hover {
         color: black;
         cursor: pointer;
+    }
+
+    #cart-back-mobile {
+        display: none;
     }
 
     #cart-item-count {
