feat: Melhorando esquema de cores utilizadas

--- a/src/assets/css/colors.scss
+++ b/src/assets/css/colors.scss
@@ -2,6 +2,6 @@
 $positive: #2fd573;
 $optional: #ffa503;
 $negative: #ff4858;
-$main: azure;
-$contrast: #e8effa;
+$main: #ffffff;
+$contrast: #eff3fa;
 $complementary: grey;
