fix: Corrigindo cores nas telas de explicação

--- a/src/assets/css/colors.scss
+++ b/src/assets/css/colors.scss
@@ -2,6 +2,8 @@
 $positive: #2fd573;
 $optional: #ffa503;
 $negative: #ff4858;
+$dark: #505050;
 $main: #ffffff;
 $contrast: #eff3fa;
-$complementary: grey;
+$complementary: #808080;
+$gray: #b0bec5;
