--- a/src/assets/css/l1/big.scss
+++ b/src/assets/css/l1/big.scss
@@ -205,6 +205,7 @@
         background-color: #ff485771;
         font-family: "Source Sans Pro", sans-serif;
         display: none;
+        align-items: center;
         gap: 20px;
     }
 
