--- a/src/assets/css/l1/medium.scss
+++ b/src/assets/css/l1/medium.scss
@@ -208,6 +208,7 @@
         background-color: #ff485771;
         font-family: "Source Sans Pro", sans-serif;
         display: none;
+        align-items: center;
         gap: 20px;
     }
 
