feat: Criando indicador dos objetivos para facilitar entendimento do usuário

--- a/src/assets/css/l1/big.scss
+++ b/src/assets/css/l1/big.scss
@@ -40,7 +40,7 @@
         font-size: 35px;
         left: 50px;
         top: 90px;
-        z-index: 4;
+        z-index: 3;
         color: $complementary;
         background-color: $main;
         box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 5px;
@@ -48,6 +48,23 @@
         border-radius: 10px;
         position: fixed;
         transition: all 0.2s;
+    }
+
+    #objectives-status-indicator {
+        width: 30px;
+        height: 30px;
+        left: 45px;
+        top: 0px;
+        z-index: 5;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        background-color: $main;
+        font-family: "Source Sans Pro", sans-serif;
+        transition: all 0.2s;
+        background-color: $main;
     }
 
     #place-image {
@@ -102,6 +119,7 @@
     }
 
     #alert-message {
+        max-width: 80%;
         font-size: 17px;
         font-family: "Source Sans Pro", sans-serif;
     }
@@ -423,7 +441,7 @@
 
     .alert-error {
         background-color: #ffe0e3;
-        color: #ff4858;
+        color: $negative;
     }
 
     .alert-error>div:first-of-type {
@@ -432,6 +450,15 @@
 
     .alert-icon {
         font-size: 27px;
+    }
+
+    .objectives-status-indicator-icon {
+        font-size: 30px;
+        color: $negative;
+    }
+
+    .indicator-icon-positive {
+        color: $positive;
     }
 
     .place-info-box {
