--- a/src/assets/css/l2/small.scss
+++ b/src/assets/css/l2/small.scss
@@ -38,6 +38,23 @@
         transition: all 0.2s;
     }
 
+    #objectives-status-indicator {
+        width: 20px;
+        height: 20px;
+        left: 35px;
+        top: 0px;
+        z-index: 5;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        background-color: $main;
+        font-family: "Source Sans Pro", sans-serif;
+        transition: all 0.2s;
+        background-color: $main;
+    }
+
     #place-image {
         width: 100px;
         height: 100px;
@@ -71,9 +88,9 @@
 
     #alert {
         position: fixed;
-        width: 300px;
+        width: 250px;
         height: 80px;
-        top: 80px;
+        top: 20px;
         border-radius: 5px;
         z-index: 8;
         display: flex;
@@ -98,6 +115,7 @@
     }
 
     #alert-message {
+        max-width: 80%;
         font-size: 17px;
         font-family: "Source Sans Pro", sans-serif;
     }
@@ -125,7 +143,7 @@
         top: 0%;
         z-index: 7;
         width: 90.5vw;
-        height: 85vh;
+        height: 90vh;
         padding: 20px 20px 120px 20px;
         background-color: $main;
         display: flex;
@@ -141,7 +159,7 @@
         top: 0%;
         z-index: 7;
         width: 90.5vw;
-        height: 85vh;
+        height: 90vh;
         padding: 20px 20px 120px 20px;
         background-color: $main;
         display: flex;
@@ -199,6 +217,41 @@
         flex-direction: column;
         align-items: center;
         gap: 20px;
+    }
+
+    #objectives-information {
+        margin-top: 40px;
+        padding: 20px;
+        border-radius: 10px;
+        background-color: #ff485771;
+        font-family: "Source Sans Pro", sans-serif;
+        display: none;
+        align-items: center;
+        gap: 20px;
+    }
+
+    #objectives-information-icon {
+        width: 25px;
+        height: 25px;
+        padding: 10px;
+        color: $main;
+        background-color: $negative;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #objectives-information-icon-done {
+        width: 25px;
+        height: 25px;
+        padding: 10px;
+        color: $main;
+        background-color: $positive;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     #item-description-modal {
@@ -400,7 +453,7 @@
 
     .alert-error {
         background-color: #ffe0e3;
-        color: #ff4858;
+        color: $negative;
     }
 
     .alert-error>div:first-of-type {
@@ -409,6 +462,15 @@
 
     .alert-icon {
         font-size: 27px;
+    }
+
+    .objectives-status-indicator-icon {
+        font-size: 20px;
+        color: $negative;
+    }
+
+    .indicator-icon-positive {
+        color: $positive;
     }
 
     .place-info-box {
@@ -514,6 +576,14 @@
         color: $dark;
         text-align: center;
         font-family: "Source Sans Pro", sans-serif;
+    }
+
+    .objectives-information-show {
+        display: flex !important;
+    }
+
+    .objectives-information-text-done {
+        background-color: #2fd5744d !important;
     }
 
     .item-additional-modal-open {
