--- a/src/assets/css/l1/medium.scss
+++ b/src/assets/css/l1/medium.scss
@@ -738,8 +738,8 @@
 
     .cart-item-additional-remove {
         list-style-type: none;
-        text-decoration: line-through;
         color: $complementary;
+        margin-bottom: 10px;
     }
 
     .cart-item-additional-remove li {
@@ -748,6 +748,14 @@
 
     .cart-item-additional-add {
         color: $complementary;
+    }
+
+    .cart-item-additional-add li {
+        margin-bottom: 5px;
+    }
+
+    .cart-item-add-name {
+        width: 120px;
     }
 
     .cart-item-add-price {
