--- a/src/assets/css/l2/big.scss
+++ b/src/assets/css/l2/big.scss
@@ -731,6 +731,7 @@
         list-style-type: none;
         text-decoration: line-through;
         color: $complementary;
+        margin-bottom: 10px;
     }
 
     .cart-item-additional-remove li {
@@ -739,6 +740,14 @@
 
     .cart-item-additional-add {
         color: $complementary;
+    }
+
+    .cart-item-additional-add li {
+        margin-bottom: 5px;
+    }
+
+    .cart-item-add-name {
+        width: 150px;
     }
 
     .cart-item-add-price {
